# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools", "setuptools-protobuf"]
build-backend = "setuptools.build_meta"

[project]
name = "rock-paper-sand"
version = "0"

[project.scripts]
rock-paper-sand = "rock_paper_sand.main:main"

[tool.black]
line-length = 80

[tool.coverage.run]
omit = [
  "**/*_pb2.py",
  "**/*_test.py",
  "**/conftest.py",
]

[tool.isort]
case_sensitive = true
force_single_line = true
force_sort_within_sections = true
profile = "black"
single_line_exclusions = [
  "collections.abc",
  "typing",
]
skip_gitignore = true
src_paths = ["rock_paper_sand"]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
packages = ["rock_paper_sand"]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "absl.*",
  "google.protobuf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = """\
  --cov=. \
  --cov-branch \
  --cov-report=term-missing \
  """

[tool.setuptools]
packages = ["rock_paper_sand"]

[tool.setuptools-protobuf]
protobufs = [
  "rock_paper_sand/proto/config.proto",
  "rock_paper_sand/proto/state.proto",
]
